Actualizacion del Index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,140 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Currículum Vitae</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
 
-Mario Rosales
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1, h2 {
+            color: #333;
+        }
+
+        .info {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .info div {
+            flex: 1;
+            padding: 10px;
+            margin: 0 5px;
+            background-color: #f0f0f0;
+            border-radius: 6px;
+        }
+
+        .profile-pic {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-right: 20px;
+        }
+
+        @media screen and (max-width: 600px) {
+            .info {
+                flex-direction: column;
+            }
+
+            .profile-pic {
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Mi Currículum Vitae</h1>
+    </header>
+
+    <section>
+        <div style="text-align: center;">
+            <img class="profile-pic" src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Foto de perfil">
+        </div>
+    </section>
+
+    <section>
+        <h2>Datos Personales</h2>
+        <div class="info">
+            <div>
+                <h3>Nombre</h3>
+                <p>Mario Augusto Rosales Gomez</p>
+            </div>
+            <div>
+                <h3>Correo Electrónico</h3>
+                <p>0011323@galilego.edu</p>
+            </div>
+            <div>
+                <h3>Teléfono</h3>
+                <p>(GT) 123-45678</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Experiencia Laboral</h2>
+        <div>
+            <h3>-Desarrollador Web -Tecnico en Hardware -Cisco Certified</h3>
+            <p>Empresa Microsoft - Miami Florida, USA | Fecha de inicio: Enero de 2025 - Fecha de fin: Indefinido</p>
+            <ul>
+                <li>Logros y responsabilidades...</li>
+                <li>A cargo del Proyecto de Digitalizacion de la empresa</li>
+                <li>Nombrado por 3 meses consecutivos como el mejor Coordinador del Depto. IT</li>
+                <Li>Entre mis responsabilidades estan:</li>
+                <li>Coordinar los soportes a los diferentes colaboradores de la institucion</li>
+                <li>Entrega de bitacora del mes de mi Departamento a RRHH</li>
+                <li>Vigilar porque los usuarios puedan trabajar sin inconvenientes con su equipo de computo</li>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <h3>Otro Trabajo</h3>
+            <p>Innovaciones Integrales - Sacatepequez, Guatemala | 2015 - 2020</p>
+            <ul>
+                <li>Logros y responsabilidades...</li>
+                <li>A cargo del Departamento de It</li>
+                <li>Nombrado Colaborador con mayor puntaje en la Encuesta de Desempeno</li>
+                <Li>Entre mis responsabilidades estan:</li>
+                <li>Supervisar las diferentes reparaciones</li>
+                <li>Coordinar las ventas del inventario</li>
+                <li>Coordinar las reparaciones de los diferentes clientes</li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <h2>Educación</h2>
+        <div>
+            <h3>Grado Universitario:  Ingenieria en Telecomunicaciones</h3>
+            <p>Universidad Mariano Galvez de Guatemala - Guatemala | 2020 - 2025</p>
+            <p>Ingeniero en Telecomunicaciones</p>
+        </div>
+    </section>
+</body>
+</html>
